# document-tools-platform

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/config/: .env.example  README.md
app/core/: __init__.py  exceptions.py
app/core/concurrency/: __init__.py  task_runner.py
app/core/providers/: __init__.py  azure_doc_converter_provider.py  azure_ocr_provider.py  com_word_provider.py  document_converter_provider.py  ocr_provider.py  tesseract_ocr_provider.py
app/core/services/: __init__.py  _deskew.py  export_service.py  ocr_service.py  pdf_service.py  scan_service.py
app/infrastructure/: __init__.py  config.py  logger.py
app/qt_editor/: __init__.py  __main__.py  clickable_page_item.py  editor_window.py
app/ui/: __init__.py  errors.py  main_window.py  registry.py
app/ui/views/: __init__.py  tool_view.py
app/ui/widgets/: __init__.py  panels.py  pdf_page_preview.py  rows.py
tests/: conftest.py
tests/fixtures/: docx_factory.py  image_pdf_factory.py  pdf_factory.py  scan_factory.py
tests/integration/: _process_utils.py  test_com_word_provider.py  test_tesseract_ocr_provider.py
tests/unit/: test_clickable_page_item.py  test_com_word_provider.py  test_config.py  test_deskew.py  test_export_service.py  test_logger.py  test_ocr_providers.py  test_ocr_service.py  test_pdf_page_preview.py  test_pdf_service.py  test_providers.py  test_qt_editor_window.py  test_scan_service.py  test_task_runner.py  test_tesseract_ocr_provider.py  test_ui_errors.py  test_ui_panels.py  test_ui_registry.py  test_ui_tool_view_lifecycle.py  test_ui_views.py
