[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "acrobat-tools"
version = "0.1.0"
description = "Acrobat Tools V2.0 - PDF utility suite scaffold (Sprint 0 foundation)."
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "customtkinter",
    "pikepdf>=9",
    "img2pdf",
    "Pillow",
    "pymupdf>=1.24.9,<2",
    "pywin32",
    "pytesseract",
    "opencv-python-headless>=5.0.0",
]

[dependency-groups]
lint = ["ruff"]
test = ["pytest", "python-docx"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern Python idioms)
    "B",   # flake8-bugbear (common bug patterns)
    "BLE", # flake8-blind-except (bare `except Exception` must be justified)
    "SIM", # flake8-simplify
]

# NOTE: [dependency-groups] follows PEP 735 and requires pip>=25.1 to install
# directly (e.g. `pip install --group lint` / `pip install --group test`).
# On pip<25.1, install the package in editable mode and add the tooling
# manually instead:
#   pip install -e .
#   pip install ruff pytest
